--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.1
+  form_field_validator: ^1.1.0
+  gap: ^3.0.1
   nb_utils: ^7.0.0
   simple_shadow: ^0.3.1
 
