--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=3.3.3 <4.0.0'
+  sdk: ">=3.3.3 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -14,6 +14,8 @@ dependencies:
   flutter_spinkit: ^5.2.1
   form_field_validator: ^1.1.0
   gap: ^3.0.1
+  intl: ^0.18.1
+  logger: ^2.2.0
   nb_utils: ^7.0.0
   simple_shadow: ^0.3.1
 
@@ -28,11 +30,9 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
-
   # fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-
