--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.1
+  flutter_switch: ^0.3.2
   form_field_validator: ^1.1.0
   gap: ^3.0.1
   intl: ^0.18.1
