--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_switch: ^0.3.2
   form_field_validator: ^1.1.0
   gap: ^3.0.1
+  internet_connection_checker: ^1.0.0+1
   intl: ^0.18.1
   logger: ^2.2.0
   nb_utils: ^7.0.0
