--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,18 +12,19 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.1
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.16
   flutter_switch: ^0.3.2
   form_field_validator: ^1.1.0
   gap: ^3.0.1
   get: ^4.6.6
   internet_connection_checker: ^1.0.0+1
-  intl: ^0.19.0
+  intl: ^0.20.1
   logger: ^2.2.0
   nb_utils: ^7.0.5
   pinput: ^5.0.0
   simple_shadow: ^0.3.1
   smart_auth: ^2.0.0
+  toastification: ^2.3.0
 
 dev_dependencies:
   flutter_test:
