--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   auto_size_text: ^3.0.0
+  equatable: ^2.0.7
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.1
